# fartracker

./: .gitignore  AGENTS.md  Makefile  README.md  deploy.sh  generate-secrets.sh
backend/: far_out.nginx.conf  fartracker.logrotate  fartracker.service  manage.py  nginx.conf  pyproject.toml  run-dev.sh  run-prod.sh  sim-trajectory.py
backend/fartracker_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/team_tracking/: admin.py  apps.py  auth.py  consumers.py  models.py  routing.py  serializers.py  token_views.py  urls.py  views.py
backend/team_tracking/migrations/: 0001_initial.py  0002_alter_team_category.py  0003_increase_recovery_piece_name_length.py  0004_increase_recovery_piece_decimal_places.py  0005_trajectory.py  0006_salvoschedule.py  0007_add_timing_fields.py  0008_timing_defaults.py  0009_team_data_field.py  0010_salvo_time.py  0011_salvoschedule_salvo_timer_started.py  0012_schedule_change_log.py  0013_add_voting.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: config.json  far_areas.kml
frontend/src/: App.vue  config.ts  declarations.d.ts  main.ts  style.css
frontend/src/api/: index.ts  useApi.ts  useSchedule.ts  useVotes.ts
frontend/src/components/: AppFooter.vue  AppNavbar.vue  CoordinateInput.vue  DeleteRecoveryPieceForm.vue  RecoveryPathForm.vue  RecoveryPathManager.vue  RecoveryPieceForm.vue  RecoveryPieceManager.vue  RecoveryTrajectoryForm.vue  ScheduleLane.vue  SiteStatusBanner.vue  SiteStatusForm.vue  TeamCard.vue  TeamForm.vue  TeamFrequenciesForm.vue  TeamSelect.vue  TeamStatusForm.vue  VoteCard.vue  VoteHistory.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  site_status.ts
frontend/src/types/: index.ts
frontend/src/views/: AdminView.vue  (+7 more)
gis/: all_far.kmz  far_areas.dbf  far_areas.shp  far_areas.shx  far_gis.qgz
