[project]
name = "fartracker-backend"
version = "0.0.0"
requires-python = "==3.12.*"
dependencies = [
  "dj-database-url",
  "django>=5.2,<5.3",
  "gunicorn",
  "psycopg2-binary",
  "whitenoise",
  "django-cors-headers",
  "djangorestframework",
  "djangorestframework-simplejwt",
  "python-dotenv",
  "channels>=4.3.2",
  "uvicorn>=0.48.0",
  "websockets>=16.0",
  "drf-spectacular>=0.29.0",
  "drf-spectacular-sidecar>=2026.5.1",
  "channels-yroom>=0.0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fartracker_backend*", "team_tracking*"]

[dependency-groups]
dev = [
  "black",
  "django-stubs",
  "ipdb",
  "ruff",
]
